--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Image</label>
-                    <input name="listing[image]" placeholder="Enter Image URL/Link" type="text" class="form-control" />
+                    <input name="listing[image.url]" placeholder="Enter Image URL/Link" type="text" class="form-control" />
                 </div>
                 <div class="row">
                     <div class="mb-3 col-md-4">
