--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,16 +6,16 @@
         </div>
 
         <div class="card col-6 offset-3 show-card">
-            <img src="<%= listing.image.url %>" class="card-img-top show-img    " alt="listing_image">
+            <img src="<%= listing.image.url %>" class="card-img-top show-img mt-3" alt="listing_image">
             <div class="card-body">
-                <p class="card-text">
+                <p class="card-text mt-3">
                     <b>
                         <%= listing.title %>
                     </b><br>
                     <%= listing.description %> <br>
-                        &#x20B9; <%= listing.price.toLocaleString("en-IN") %> <br>
-                            <%= listing.location %> <br>
-                                <%= listing.country %>
+                        <b>&#x20B9; <%= listing.price.toLocaleString("en-IN") %></b> <br>
+                        <%= listing.location %> <br>
+                            <%= listing.country %>
                 </p>
             </div>
         </div>
