--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -21,10 +21,10 @@
         </div>
 
         <div class="btns">
-            <a href="/listings/<%= listing._id%>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+            <a href="/listings/<%= listing._id%>/edit" class="btn btn-dark col-2 offset-3 edit-btn">Edit</a>
 
             <form action="/listings/<%=listing._id%>?_method=DELETE" method="POST">
-                <button class="btn btn-dark offset-5">Delete</button>
+                <button class="btn btn-dark delete-btn offset-6">Delete</button>
             </form>
         </div>
     </div>
