--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,13 @@
 <% layout("/layouts/boilerplate") %>
 
-    <h2>All Listings</h2>
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <h2 class="mt-4">All Listings</h2>
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-4">
         <% for(let listing of allListings) { %>
             <a href="/listings/<%=listing._id%>" class="listing-link">
                 <div class="card">
                     <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                     <div class="card-body">
-                        <p class="card-text">
+                        <p class="card-text mt-3">
                             <b>
                                 <%= listing.title %>
                             </b> <br>
