--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,32 +3,46 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
             <h2>Edit Your Listing</h2>
-            <form method="POST" action="/listings/<%= listing._id %>?_method=PUT">
+            <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input name="listing[title]" value="<%=listing.title %>" type=" text" class="form-control" />
+                    <input name="listing[title]" value="<%=listing.title %>" type=" text" class="form-control"
+                        required />
+                    <div class="valid-feedback">Title Looks Good!</div>
+                    <div class="invalid-feedback">Enter a valid Title!</div>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" class="form-control"><%=listing.description %></textarea>
+                    <textarea name="listing[description]" class="form-control"
+                        required><%=listing.description %></textarea>
+                    <div class="valid-feedback">Description Looks Good!</div>
+                    <div class="invalid-feedback">Please Enter a short Description!</div>
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Image</label>
-                    <input name="listing[image.url]" value="<%=listing.image.url %>" type="text" class="form-control" />
+                    <input name="listing[image.url]" value="<%=listing.image.url %>" type="text" class="form-control"
+                        required />
+                    <div class="invalid-feedback">Please enter a valid URL for Image!</div>
                 </div>
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input name="listing[price]" value="<%=listing.price %>" type="number" class="form-control" />
+                        <input name="listing[price]" value="<%=listing.price %>" type="number" class="form-control"
+                            required />
+                        <div class="invalid-feedback">Enter a valid Price!</div>
                     </div>
                     <div class="mb-3 col-md-8">
                         <label for="country">Country</label>
-                        <input name="listing[country]" value="<%=listing.country %>" type="text" class="form-control" />
+                        <input name="listing[country]" value="<%=listing.country %>" type="text" class="form-control"
+                            required />
+                        <div class="invalid-feedback">Enter a valid Country Name!</div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="location">Location</label>
-                    <input name="listing[location]" value="<%=listing.location %>" type="text" class="form-control" />
+                    <input name="listing[location]" value="<%=listing.location %>" type="text" class="form-control"
+                        required />
+                    <div class="invalid-feedback">Enter a valid Location!</div>
                 </div>
                 <button class="btn btn-dark edit-btn mt-3">Edit!</button>
                 <br><br>
