--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -11,7 +11,7 @@
                             <b>
                                 <%= listing.title %>
                             </b> <br>
-                            &#x20B9; <%= listing.price.toLocaleString("en-IN") %> /night
+                            &#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> /night
                         </p>
                     </div>
                 </div>
