--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,35 +3,45 @@
     <div class="row mt-3">
         <div class="col-8 offset-2">
             <h2>Create a New Listing</h2>
-            <form method="POST" action="/listings">
+            <form method="POST" action="/listings" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input name="listing[title]" placeholder="Title of your Listing" type="text" class="form-control" />
+                    <input name="listing[title]" placeholder="Title of your Listing" type="text" class="form-control"
+                        required />
+                    <div class="valid-feedback">Title Looks Good!</div>
+                    <div class="invalid-feedback">Enter a valid Title!</div>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
                     <textarea name="listing[description]" class="form-control"
-                        placeholder="Write somthing about your place..."></textarea>
+                        placeholder="Write somthing about your place..." required></textarea>
+                    <div class="valid-feedback">Description Looks Good!</div>
+                    <div class="invalid-feedback">Please Enter a short Description!</div>
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Image</label>
-                    <input name="listing[image.url]" placeholder="Enter Image URL/Link" type="text" class="form-control" />
+                    <input name="listing[image.url]" placeholder="Enter Image URL/Link" type="text"
+                        class="form-control" />
                 </div>
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input name="listing[price]" placeholder="Enter Amount" type="number" class="form-control" />
+                        <input name="listing[price]" placeholder="Enter Amount" type="number" class="form-control"
+                            required />
+                        <div class="invalid-feedback">Enter a valid Price!</div>
                     </div>
                     <div class="mb-3 col-md-8">
                         <label for="country" class="form-label">Country</label>
                         <input name="listing[country]" placeholder="India, Australia, UAE..." type="text"
-                            class="form-control" />
+                            class="form-control" required />
+                        <div class="invalid-feedback">Enter a valid Country Name!</div>
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="location" class="form-label">Location</label>
-                    <input name="listing[location]" placeholder="Mumbai, Maharashtra" type="text"
-                        class="form-control" />
+                    <input name="listing[location]" placeholder="Mumbai, Maharashtra" type="text" class="form-control"
+                        required />
+                    <div class="invalid-feedback">Enter a valid Location!</div>
                 </div>
                 <button class="btn btn-dark add-btn mt-3">Add Listing</button>
                 <br><br>
