--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("layouts/boilerplate") %>
 
     <h2 class="mt-4">All Listings</h2>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-4">
