--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("layouts/boilerplate") %>
 
     <div class="row mt-3">
         <div class="col-8 offset-2">
@@ -26,8 +26,7 @@
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input name="listing[price]" placeholder="Enter Amount" type="number" class="form-control"
-                            required />
+                        <input name="listing[price]" placeholder="Enter Amount" class="form-control" required />
                         <div class="invalid-feedback">Enter a valid Price!</div>
                     </div>
                     <div class="mb-3 col-md-8">
