--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,10 +4,10 @@
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-4">
         <% for(let listing of allListings) { %>
             <a href="/listings/<%=listing._id%>" class="listing-link">
-                <div class="card">
+                <div class="card listing-card">
                     <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
                     <div class="card-body">
-                        <p class="card-text mt-3">
+                        <p class="card-text mt-3 listing-card-text">
                             <b>
                                 <%= listing.title %>
                             </b> <br>
