Used Express Router to seprate the Routes into individual files.

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -13,7 +13,7 @@
                 <p class="card-text mt-3">
                     <br>
                     <%= listing.description %> <br><br>
-                        <b>&#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> %></b> for 1 night <br><br>
+                        <b>&#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> %></b> / night <br><br>
                         <%= listing.location %>, <br>
                             <%= listing.country %>
                 </p>
