--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -22,6 +22,7 @@
     <%- include("../includes/navbar.ejs") %>
 
         <div class="container">
+            <%- include("../includes/flash.ejs") %>
             <%- body %>
         </div>
 
