--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,21 +2,22 @@
 
     <div class="row mt-3">
         <h1 class="col-6 offset-3">SignUp on Wanderlust</h1>
+        <br><br><br>
         <div class="col-6 offset-3">
             <form action="/signup" method="POST" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
-                    <input name="username" id="username" type="text" class="form-control" required />
+                    <input name="username" placeholder="Create a username" id="username" type="text" class="form-control" required />
                     <div class="valid-feedback"> Looks Good!</div>
                     <div class="invalid-feedback">Enter a valid Username!</div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input name="email" id="email" type="email" class="form-control" required />
+                    <input name="email" placeholder="Enter your email id" id="email" type="email" class="form-control" required />
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input name="password" id="password" type="password" class="form-control" required />
+                    <input name="password" placeholder="Create a password" id="password" type="password" class="form-control" required />
                 </div>
                 <button class="btn btn-dark add-btn mt-3">Sign Up</button>
             </form>
