--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,62 +10,72 @@
         <div class="card col-6 offset-3 show-card listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img mt-3" alt="listing_image">
             <div class="card-body">
-                <p class="card-text mt-3">
-                    <br>
-                    <%= listing.description %> <br><br>
-                        <b>&#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> %></b> / night <br><br>
-                        <%= listing.location %>, <br>
-                            <%= listing.country %>
+                <p class="card-text mt-3"><i>
+                        Owned by <%= listing.owner.username %>
+                    </i></p>
+                <p class="card-text">
+                    <%= listing.description %>
+                </p>
+                <p class="card-text"><b>&#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %>
+                            %></b> / night</p>
+                <p class="card-text">
+                    <%= listing.location %>,
+                </p>
+                <p class="card-text">
+                    <%= listing.country %>
                 </p>
             </div>
         </div>
 
-        <div class="btns">
-            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-2 offset-3 edit-btn">Edit</a>
+        <% if(currentUser && currentUser._id.equals(listing.owner._id)) { %>
+            <div class="btns">
+                <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-2 offset-3 edit-btn">Edit</a>
 
-            <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
-                <button class="btn btn-outline-dark delete-btn offset-6">Delete</button>
-            </form>
-        </div>
-
-        <div class="col-8 offset-3 mb-4">
-            <hr />
-            <h4>Leave a Review</h4>
-            <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate class="needs-validation">
-                <div class="mb-3 mt-3">
-                    <label for="rating" class="form-label">Rating</label>
-                    <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
-                </div>
-                <div class="mb-3 mt-3">
-                    <label for="comment" class="form-label">Comments</label>
-                    <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"
-                        required></textarea>
-                    <div class="invalid-feedback">Please add some comments for review</div>
-                </div>
-                <button class="btn btn-outline-dark submit-btn">Submit</button>
-            </form>
-
-            <hr />
-
-            <p><b>All Reviews</b></p>
-            <div class="row">
-                <% for(review of listing.reviews) { %>
-                    <div class="card col-5 mb-3 ms-3 p-3">
-                        <div class="card-body">
-                            <h5 class="card-title">Jack Salter</h5>
-                            <p class="card-text">
-                                <%= review.comment %>
-                            </p>
-                            <p class="card-text">
-                                <%= review.rating %> stars
-                            </p>
-                        </div>
-                        <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
-                            class="mt-3 mb-2" method="POST">
-                            <button class="btn btn-sm btn-outline-dark delete-btn">Delete</button>
-                        </form>
-                    </div>
-                    <% } %>
+                <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-outline-dark delete-btn offset-6">Delete</button>
+                </form>
             </div>
-        </div>
+            <% } %>
+
+                <div class="col-8 offset-3 mb-4">
+                    <hr />
+                    <h4>Leave a Review</h4>
+                    <form action="/listings/<%= listing.id %>/reviews" method="POST" novalidate
+                        class="needs-validation">
+                        <div class="mb-3 mt-3">
+                            <label for="rating" class="form-label">Rating</label>
+                            <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+                        </div>
+                        <div class="mb-3 mt-3">
+                            <label for="comment" class="form-label">Comments</label>
+                            <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"
+                                required></textarea>
+                            <div class="invalid-feedback">Please add some comments for review</div>
+                        </div>
+                        <button class="btn btn-outline-dark submit-btn">Submit</button>
+                    </form>
+
+                    <hr />
+
+                    <p><b>All Reviews</b></p>
+                    <div class="row">
+                        <% for(review of listing.reviews) { %>
+                            <div class="card col-5 mb-3 ms-3 p-3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Jack Salter</h5>
+                                    <p class="card-text">
+                                        <%= review.comment %>
+                                    </p>
+                                    <p class="card-text">
+                                        <%= review.rating %> stars
+                                    </p>
+                                </div>
+                                <form action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                                    class="mt-3 mb-2" method="POST">
+                                    <button class="btn btn-sm btn-outline-dark delete-btn">Delete</button>
+                                </form>
+                            </div>
+                            <% } %>
+                    </div>
+                </div>
     </div>
