Added Map in the Show Page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,7 +124,7 @@ body {
 
 /* Show Page */
 .show-img {
-    height: 30vh;
+    height: 50vh;
 }
 
 .btns {
@@ -143,4 +143,11 @@ body {
 .delete-btn:hover {
     background-color: #000000 !important;
     color: #ff6666 !important;
+}
+
+/* Map */
+#map {
+    height: 50vh;
+    width: 90vh;
+    border-radius: 1rem !important;
 }
