--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,27 +1,29 @@
 <% layout("layouts/boilerplate") %>
+    <script>
+        const mapToken = "<%= process.env.MAP_TOKEN %>";
+    </script>
 
     <div class="row mt-3">
         <div class="col-8 offset-3">
             <h3>
                 <%= listing.title %>
             </h3>
+            <p class="card-text">
+                <%= listing.location %>, <%= listing.country %>
+            </p>
         </div>
 
         <div class="card col-6 offset-3 show-card listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img mt-3" alt="listing_image">
             <div class="card-body">
-                <p class="card-text mt-3"><i>
-                        Owned by <%= listing.owner.username %>
-                    </i></p>
+                <p class="card-text mt-3"><b><i>
+                            Hosted by <%= listing.owner.username %>
+                        </i></b></p>
                 <p class="card-text">
                     <%= listing.description %>
                 </p>
                 <p class="card-text"><b>&#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %>
                             %></b> / night</p>
-                <p class="card-text">
-                    <%= listing.location %>,<br>
-                        <%= listing.country %>
-                </p>
             </div>
         </div>
 
@@ -69,30 +71,41 @@
                         <hr />
                         <% } %>
 
-                            <p><b>All Reviews</b></p>
-                            <div class="row">
-                                <% for(review of listing.reviews) { %>
-                                    <div class="card col-5 mb-3 ms-3 p-3">
-                                        <div class="card-body">
-                                            <h5 class="card-title">
-                                                <%= review.author.username %>
-                                            </h5>
-                                            <p class="starability-result card-text" data-rating="<%= review.rating %>">
-                                            </p>
-                                            <p class="card-text">
-                                                <%= review.comment %>
-                                            </p>
-                                        </div>
+                            <% if(listing.reviews.length> 0) { %>
+                                <div class="row">
+                                    <p><b>All Reviews</b></p>
+                                    <% for(review of listing.reviews) { %>
+                                        <div class="card col-5 mb-3 ms-3 p-3">
+                                            <div class="card-body">
+                                                <h5 class="card-title">
+                                                    <%= review.author.username %>
+                                                </h5>
+                                                <p class="starability-result card-text"
+                                                    data-rating="<%= review.rating %>">
+                                                </p>
+                                                <p class="card-text">
+                                                    <%= review.comment %>
+                                                </p>
+                                            </div>
 
-                                        <% if(currentUser && currentUser._id.equals(review.author._id)) { %>
-                                            <form
-                                                action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
-                                                class="mt-3 mb-2" method="POST">
-                                                <button class="btn btn-sm btn-outline-dark delete-btn">Delete</button>
-                                            </form>
-                                            <% } %>
-                                    </div>
-                                    <% } %>
-                            </div>
+                                            <% if(currentUser && currentUser._id.equals(review.author._id)) { %>
+                                                <form
+                                                    action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+                                                    class="mt-3 mb-2" method="POST">
+                                                    <button
+                                                        class="btn btn-sm btn-outline-dark delete-btn">Delete</button>
+                                                </form>
+                                                <% } %>
+                                        </div>
+                                        <% } %>
+                                </div>
+                                <hr />
+                                <% } %>
+                </div>
+                <div class="col-6 offset-3 mb-4">
+                    <h4>Where you'll be</h4>
+                    <br>
+                    <div id="map"></div>
                 </div>
     </div>
+    <script src="/js/map.js"></script>
