--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/listings"><i class="fa-regular fa-map"></i></a>
-        <h2>airbnb</h2>
+        <a class="navbar-brand" href="/listings"><i class="fa-regular fa-map"></i>
+            <h2>airbnb</h2>
+        </a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -9,6 +11,15 @@
             <div class="navbar-nav">
                 <a class="nav-link" href="/listings">Explore</a>
             </div>
+
+            <div class="navbar-nav ms-auto search">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2 search-input" type="search" placeholder="Search destinations" />
+                    <button class="btn search-btn" type="submit"><i
+                            class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+            </div>
+
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="/listings/new">Airbnb your home</a>
                 <% if(!currentUser) { %>
