--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,18 +5,17 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            align-items: center;     
             border: 1px solid rgba(0, 0, 0, 0.125);
             border-radius: 5rem;
-            margin: 1rem 9rem;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.168);
+            margin: 1rem 2rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.09);
         }
 
         .filter {
             text-align: center;
             margin-right: 2rem;
             margin-top: 2rem;
-            opacity: 0.8;
+            opacity: 0.7;
             transition: all 0.3s ease;
         }
 
@@ -27,7 +26,24 @@
         }
 
         .filter p {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
+        }
+
+        .tax-info {
+            display: none;
+            font-size: 0.8rem;
+            color: #6c757d;
+        }
+
+        .tax-toggle {
+            margin: 1rem 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid rgba(0, 0, 0, 0.151);
+            border-radius: 1rem;
+            padding: 0.5rem 1rem;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.09);
         }
     </style>
 
@@ -69,6 +85,21 @@
             <div><i class="fa-solid fa-home"></i></div>
             <p>House</p>
         </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-water-ladder"></i></div>
+            <p>Pool</p>
+        </div>
+        <div class="filter">
+            <div><i class="fa-solid fa-sailboat"></i></div>
+            <p>Boats</p>
+        </div>
+
+        <div class="tax-toggle">
+            <div class="form-check-reverse form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+                <label class="form-check-label" for="switchCheckDefault">Display taxes</label>
+            </div>
+        </div>
     </div>
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
         <% for(let listing of allListings) { %>
@@ -81,9 +112,24 @@
                                 <%= listing.title %>
                             </b> <br>
                             &#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> / night
+                                <i class="tax-info"> &nbsp;&nbsp;&nbsp; +18% GST</i>
                         </p>
                     </div>
                 </div>
             </a>
             <% } %>
     </div>
+
+    <script>
+        const taxSwitch = document.getElementById('switchCheckDefault');
+        taxSwitch.addEventListener('click', () => {
+            const taxInfo = document.querySelectorAll('.tax-info');
+            for (info of taxInfo) {
+                if (info.style.display != "inline") {
+                    info.style.display = "inline";
+                } else {
+                    info.style.display = "none";
+                }
+            }
+        });
+    </script>
