--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
+    <title>Project AirBNB</title>
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <meta name="description" content="A clone of AirBNB built with Node.js, Express, and MongoDB.">
+    <meta name="keywords" content="AirBNB, Node.js, Express, MongoDB, EJS, HTML, CSS, JavaScript">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/rating.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
