--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -5,16 +5,29 @@
             <h2>Edit Your Listing</h2>
             <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" class="needs-validation" novalidate
                 enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label for="title" class="form-label">Title</label>
-                    <input name="listing[title]" value="<%=listing.title %>" type=" text" class="form-control"
-                        required />
-                    <div class="valid-feedback">Title Looks Good!</div>
-                    <div class="invalid-feedback">Enter a valid Title!</div>
+                <div class="row">
+                    <div class="mb-3 col-md-8">
+                        <label for="title" class="form-label">Title</label>
+                        <input name="listing[title]" value="<%=listing.title %>" type=" text" class="form-control"
+                            required />
+                        <div class="valid-feedback">Title Looks Good!</div>
+                        <div class="invalid-feedback">Enter a valid Title!</div>
+                    </div>
+                    <div class="mb-3 col-md-4">
+                        <label for="category" class="form-label">Category</label>
+                        <select name="listing[category]" id="category" class="form-select" required>
+                            <% categories.forEach(category=> { %>
+                                <option value="<%= category %>" <%=listing.category===category ? 'selected' : '' %>>
+                                    <%= category %>
+                                </option>
+                                <% }) %>
+                        </select>
+                        <div class="invalid-feedback">Please select a category!</div>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" class="form-control"
+                    <textarea name="listing[description]" class="form-control" rows="5"
                         required><%=listing.description %></textarea>
                     <div class="valid-feedback">Description Looks Good!</div>
                     <div class="invalid-feedback">Please Enter a short Description!</div>
@@ -22,7 +35,8 @@
                 <div class="mb-3">
                     Current Listing Image:
                     <br><br>
-                    <img src="<%= originalImageUrl %>" alt="listing_image" style="width: 70%; height: 15rem; object-fit: cover;">
+                    <img src="<%= originalImageUrl %>" alt="listing_image"
+                        style="width: 70%; height: 15rem; object-fit: cover;">
                 </div>
                 <div class="mb-3">
                     <label for="image" class="form-label">Upload New Image</label>
