--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,81 +1,96 @@
 <% layout("layouts/boilerplate") %>
 
-    <div id="filters">
-        <div class="filter <%= currentCategory === 'All' ? 'active' : '' %>" data-category="All">
-            <div><i class="fa-solid fa-list-ul"></i></div>
-            <p>All</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Trending' ? 'active' : '' %>" data-category="Trending">
-            <div><i class="fa-solid fa-fire"></i></div>
-            <p>Trending</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Rooms' ? 'active' : '' %>" data-category="Rooms">
-            <div><i class="fa-solid fa-bed"></i></div>
-            <p>Rooms</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Iconic Cities' ? 'active' : '' %>" data-category="Iconic Cities">
-            <div><i class="fa-solid fa-tree-city"></i></div>
-            <p>Iconic Cities</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Mountains' ? 'active' : '' %>" data-category="Mountains">
-            <div><i class="fa-solid fa-mountain-sun"></i></div>
-            <p>Mountains</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Forests' ? 'active' : '' %>" data-category="Forests">
-            <div><i class="fa-solid fa-tree"></i></div>
-            <p>Forests</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Beach' ? 'active' : '' %>" data-category="Beach">
-            <div><i class="fa-solid fa-umbrella-beach"></i></div>
-            <p>Beach</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Camping' ? 'active' : '' %>" data-category="Camping">
-            <div><i class="fa-solid fa-campground"></i></div>
-            <p>Camping</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Castle' ? 'active' : '' %>" data-category="Castle">
-            <div><i class="fa-solid fa-chess-rook"></i></div>
-            <p>Castle</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Pool' ? 'active' : '' %>" data-category="Pool">
-            <div><i class="fa-solid fa-water-ladder"></i></div>
-            <p>Pool</p>
-        </div>
-        <div class="filter <%= currentCategory === 'Boats' ? 'active' : '' %>" data-category="Boats">
-            <div><i class="fa-solid fa-sailboat"></i></div>
-            <p>Boats</p>
-        </div>
-
-        <div class="tax-toggle">
-            <div class="form-check-reverse form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-                <label class="form-check-label" for="switchCheckDefault">Display taxes</label>
+    <div class="filters-wrapper">
+        <div id="filters">
+            <div class="filter <%= currentCategory === 'All' ? 'active' : '' %>" data-category="All">
+                <div><i class="fa-solid fa-list-ul"></i></div>
+                <p>All</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Trending' ? 'active' : '' %>" data-category="Trending">
+                <div><i class="fa-solid fa-fire"></i></div>
+                <p>Trending</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Rooms' ? 'active' : '' %>" data-category="Rooms">
+                <div><i class="fa-solid fa-bed"></i></div>
+                <p>Rooms</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Iconic Cities' ? 'active' : '' %>"
+                data-category="Iconic Cities">
+                <div><i class="fa-solid fa-tree-city"></i></div>
+                <p>Iconic Cities</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Mountains' ? 'active' : '' %>" data-category="Mountains">
+                <div><i class="fa-solid fa-mountain-sun"></i></div>
+                <p>Mountains</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Forests' ? 'active' : '' %>" data-category="Forests">
+                <div><i class="fa-solid fa-tree"></i></div>
+                <p>Forests</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Beach' ? 'active' : '' %>" data-category="Beach">
+                <div><i class="fa-solid fa-umbrella-beach"></i></div>
+                <p>Beach</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Camping' ? 'active' : '' %>" data-category="Camping">
+                <div><i class="fa-solid fa-campground"></i></div>
+                <p>Camping</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Castle' ? 'active' : '' %>" data-category="Castle">
+                <div><i class="fa-solid fa-chess-rook"></i></div>
+                <p>Castle</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Pool' ? 'active' : '' %>" data-category="Pool">
+                <div><i class="fa-solid fa-water-ladder"></i></div>
+                <p>Pool</p>
+            </div>
+            <div class="filter <%= currentCategory === 'Boats' ? 'active' : '' %>" data-category="Boats">
+                <div><i class="fa-solid fa-sailboat"></i></div>
+                <p>Boats</p>
             </div>
         </div>
+        <div class="scroll-hint" id="hint">
+            <i class="fa-solid fa-arrow-right"></i>
+        </div>
     </div>
-
-    <h2 class="mt-4" id="category-heading">
-        <%= currentCategory %> Listings
-    </h2>
-
-
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
-        <% for(let listing of allListings) { %>
-            <a href="/listings/<%=listing._id%>" class="listing-link">
-                <div class="card listing-card" data-category="<%= listing.category %>">
-                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
-                    <div class="card-body">
-                        <p class="card-text mt-3 listing-card-text">
-                            <b>
-                                <%= listing.title %>
-                            </b> <br>
-                            &#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A" %> / night
-                                <i class="tax-info"> &nbsp;&nbsp;&nbsp; +18% GST</i>
-                        </p>
-                    </div>
-                </div>
-            </a>
+    <% if (searchQuery) { %>
+        <% if (allListings.length===0) { %>
+            <p class="text-center text-muted">No listings found for "<%= searchQuery %>".</p>
             <% } %>
-    </div>
+                <h5 class="text-center mt-3">Results for <b>"<%= searchQuery %>"</b></h5>
+                <% } %>
 
-    <script src="/js/filter.js"></script>
+                    <h2 id="category-heading">
+                        <%= currentCategory %> Listings
+                    </h2>
+                    <hr>
+
+                    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
+                        <% for(let listing of allListings) { %>
+                            <a href="/listings/<%=listing._id%>" class="listing-link">
+                                <div class="card listing-card" data-category="<%= listing.category %>">
+                                    <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image"
+                                        style="height: 20rem;">
+                                    <div class="card-body">
+                                        <p class="card-text mt-3 listing-card-text">
+                                            <b>
+                                                <%= listing.title %>
+                                            </b> <br>
+                                            &#x20B9; <%= listing.price ? listing.price.toLocaleString("en-IN") : "N/A"
+                                                %> /
+                                                night
+                                                <i class="tax-info"> &nbsp;&nbsp;&nbsp; +18% GST</i>
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                            <% } %>
+                    </div>
+
+                    <div class="tax-toggle-floating">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="switchCheckDefault">
+                            <label class="form-check-label" for="switchCheckDefault">Display taxes</label>
+                        </div>
+                    </div>
+
+                    <script src="/js/filter.js"></script>
