--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,19 +1,33 @@
 <% layout("layouts/boilerplate") %>
 
-    <div class="row mt-3">
-        <h1 class="col-6 offset-3">Login on Wanderlust</h1>
-        <br><br><br>
-        <div class="col-6 offset-3">
-            <form action="/login" method="POST" class="needs-validation" novalidate>
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input name="username" placeholder="Enter your username" id="username" type="text" class="form-control" required />
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <h3 class="text-center mb-4">Login to Wanderlust</h3>
+                    <form action="/login" method="POST" class="needs-validation" novalidate>
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input name="username" id="username" type="text" class="form-control"
+                                placeholder="Enter your username" required />
+                            <div class="invalid-feedback">Username is required.</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input name="password" id="password" type="password" class="form-control"
+                                placeholder="Enter your password" required />
+                            <div class="invalid-feedback">Password is required.</div>
+                        </div>
+
+                        <button class="btn add-btn w-100 mt-3 py-2" type="submit">Login</button>
+                    </form>
+
+                    <div class="text-center mt-3">
+                        <small>Don't have an account? <a href="/signup" class="text-decoration-none text-danger">Sign
+                                Up</a></small>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input name="password" placeholder="Enter your password" id="password" type="password" class="form-control" required />
-                </div>
-                <button class="btn btn-dark add-btn mt-3">Login</button>
-            </form>
+            </div>
         </div>
     </div>
