--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,25 +1,41 @@
 <% layout("layouts/boilerplate") %>
 
-    <div class="row mt-3">
-        <h1 class="col-6 offset-3">SignUp on Wanderlust</h1>
-        <br><br><br>
-        <div class="col-6 offset-3">
-            <form action="/signup" method="POST" class="needs-validation" novalidate>
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input name="username" placeholder="Create a username" id="username" type="text" class="form-control" required />
-                    <div class="valid-feedback"> Looks Good!</div>
-                    <div class="invalid-feedback">Enter a valid Username!</div>
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="p-4 border rounded shadow-sm bg-light">
+                    <h3 class="text-center mb-4">Sign Up for Wanderlust</h3>
+                    <form action="/signup" method="POST" class="needs-validation" novalidate>
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input name="username" id="username" type="text" class="form-control"
+                                placeholder="Create a username" required />
+                            <div class="valid-feedback">Looks good!</div>
+                            <div class="invalid-feedback">Enter a valid username!</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input name="email" id="email" type="email" class="form-control"
+                                placeholder="Enter your email" required />
+                            <div class="invalid-feedback">Enter a valid email!</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input name="password" id="password" type="password" class="form-control"
+                                placeholder="Create a password" required />
+                            <div class="invalid-feedback">Password is required!</div>
+                        </div>
+
+                        <button class="btn add-btn w-100 mt-3 py-2" type="submit">Sign Up</button>
+                    </form>
+
+                    <div class="text-center mt-3">
+                        <small>Already have an account? <a href="/login"
+                                class="text-decoration-none text-danger">Login</a></small>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input name="email" placeholder="Enter your email id" id="email" type="email" class="form-control" required />
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input name="password" placeholder="Create a password" id="password" type="password" class="form-control" required />
-                </div>
-                <button class="btn btn-dark add-btn mt-3">Sign Up</button>
-            </form>
+            </div>
         </div>
     </div>
