--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,6 +1,6 @@
 <% layout("layouts/boilerplate") %>
 
-    <div class="filters-wrapper">
+    <div class="filters-wrapper mt-3">
         <div id="filters">
             <div class="filter <%= currentCategory === 'All' ? 'active' : '' %>" data-category="All">
                 <div><i class="fa-solid fa-list-ul"></i></div>
@@ -47,9 +47,6 @@
                 <div><i class="fa-solid fa-sailboat"></i></div>
                 <p>Boats</p>
             </div>
-        </div>
-        <div class="scroll-hint" id="hint">
-            <i class="fa-solid fa-arrow-right"></i>
         </div>
     </div>
     <% if (searchQuery) { %>
